<resources>
    <string name="app_name">Tour Costing Calculator</string>
    <string name="title_activity_accommodation">Accommodation</string>
    <string name="enter_the_description_of_the_accommodation">Enter the description of the accommodation:</string>
    <string name="e_g_hotel_stay">e.g., Hotel stay</string>
    <string name="enter_the_unit_e_g_rooms">Enter the unit (e.g., rooms):</string>
    <string name="e_g_2_rooms">e.g., 2 rooms</string>
    <string name="enter_the_number_of_days">Enter the number of days:</string>
    <string name="enter_the_number_of_nights">Enter the number of nights:</string>
    <string name="e_g_3">e.g., 3</string>
    <string name="enter_the_price_per_unit">Enter the price per unit:</string>
    <string name="e_g_100_0">e.g., 100.0</string>
    <string name="added_items">Added Items:</string>
    <string name="total_cost_0">Total Cost: 0</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="accommodation">ACCOMMODATION</string>
    <string name="add_accommodation">Add Accommodation</string>
    <string name="add_transportation">Add Transportation</string>
    <string name="add_meals">Add Meals</string>
    <string name="enter_number_of_pax">Enter Number of Pax</string>
    <string name="cost_per_pax_0">Cost per Pax: $0</string>
    <string name="profit_per_pax_10_20_30">Profit per Pax (10%, 20%, 30%)</string>
    <string name="delete">Delete</string>
    <string name="item_description_template">%1$s: %2$d unit * %3$d night * %4$.2f = %5$.2f</string>
    <string name="total_cost_template">Total Cost: %1$.2f</string>
    <string name="transportation">TRANSPORTATION</string>
    <string name="enter_the_description_of_the_transportation">Transportation description:</string>
    <string name="e_g_flight">e.g., Van</string>
    <string name="enter_the_unit_e_g_tickets">Unit:</string>
    <string name="e_g_2_tickets">e.g., 2</string>
    <string name="meals">MEALS</string>
    <string name="enter_the_description_of_the_meal">Type of meal:</string>
    <string name="e_g_lunch">e.g., Lunch</string>
    <string name="enter_the_number_of_meals">Number of meals:</string>
    <string name="enter_the_unit_e_g_people">Number of pax:</string>
    <string name="e_g_5_people">e.g., 10</string>
    <string name="cost_per_pax_template">Cost per Pax: %.2f</string>
    <string name="title_activity_transportation">Transportation</string>
    <string name="title_activity_meals">Meals</string>"
    <string name="update_cost_and_profit">Enter</string>
    <string name="profit_per_pax_template">10%% Profit: %.2f</string>
    <string name="profit_per_pax_template_2">20%% Profit: %.2f</string>
    <string name="profit_per_pax_template_3">30%% Profit: %.2f</string>
    <string name="sales_price_template">10%% Markup: %.2f</string>
    <string name="sales_price_template_2">20%% Markup: %.2f</string>
    <string name="sales_price_template_3">30%% Markup: %.2f</string>
    <string name="sales_price_text">Sales Price:</string>
    <string name="total_profit_text">Total Profit:</string>
</resources>